<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtViewEditServerAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/EDIT_SERVER_ADDRESS"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/edtTextServerAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/SERVER_ADDRESS_HINT"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtViewApiKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/EDIT_API_KEY"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/edtTextApiKey"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/EDIT_API_KEY_HINT"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>


    <!--  android:hint="@string/OPTIONAL"  -->


    <Button
        android:id="@+id/btnCheckConnection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:focusable="false"
        android:text="@string/CHECK_CONNECTION"
        android:textSize="18sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnExitAndSaveChanges"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:focusable="false"
        android:text="@string/EXIST_AND_SAVE_SETTINGS"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnExitAndDiscardChanges"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:focusable="false"
        android:text="@string/EXIST_AND_DISCARD_SETTINGS"
        android:textSize="18sp" />

</LinearLayout>