<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_frame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/idollogo" />

    <Button
        android:id="@+id/buttonCreateIndex"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:text="@string/button_create_index"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonExploreIndexes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="@string/button_explore_indexes"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonExploreAllSMS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="@string/button_explore_sms"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonAddAllSMS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="@string/button_add_all_sms"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonAddAllMMS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="@string/button_add_all_mms"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="30dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:visibility="gone" />


    <!--
    </LinearLayout>  -->
    <!-- </RelativeLayout> -->
</LinearLayout>
